--- a/css/gallery.scss
+++ b/css/gallery.scss
@@ -1,7 +1,8 @@
-$font-stack: "Rock Salt", cursive;
+$font-stack-top: "Rock Salt", cursive;
 
 *{
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 
 .wrapper{
@@ -29,7 +30,7 @@ a{
 }
 
 .logoContainer{
-  font-family: $font-stack;
+  font-family: $font-stack-top;
   position: fixed;
   top: 0;
   height: 65px;
@@ -65,18 +66,19 @@ a{
     	margin-top: 22.5px;
     	margin-right: 20px;
 			background: rgba(0, 0, 0, 0.9);
-    	box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.3);
+    	-webkit-box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.3);
+    	        box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.3);
     }
 
-      img{
-				vertical-align: middle;
-      	max-height: 20px;
-      	border-radius: 1px;
-      }
+	img{
+		vertical-align: middle;
+		max-height: 20px;
+		border-radius: 1px;
+	}
 }
 
 .lista{
-	font-family: $font-stack;
+	font-family: $font-stack-top;
 	line-height: initial;
 	margin: 0;
 	padding: 0;
@@ -271,7 +273,8 @@ a{
 	transition: 0.6s;
 
   &:hover{
-  	box-shadow: inset 0 0 97px -20px rgba(214, 214, 194, 0.2);
+  	-webkit-box-shadow: inset 0 0 97px -20px rgba(214, 214, 194, 0.2);
+  	        box-shadow: inset 0 0 97px -20px rgba(214, 214, 194, 0.2);
   }
 
   li{
@@ -359,6 +362,7 @@ a{
 .soundContainer{
 	float: right;
 	margin-right: 25px;
+	cursor: pointer;
 
   img{
   	display: inline-block;
@@ -379,10 +383,8 @@ a{
 	width: 98%;
 	display: block;
 	-webkit-column-count: 2;
-	   -moz-column-count: 2;
 	        column-count: 2;
 	-webkit-column-gap: 12px;
-	   -moz-column-gap: 12px;
 	        column-gap: 12px;
 
   img{
@@ -396,7 +398,6 @@ a{
 	position: fixed;
 	top: 0;
 	left: 0;
-	text-align: center;
 	width: 100%;
 	height: 100%;
 	display: none;
@@ -404,39 +405,40 @@ a{
 }
 
 .overlayImgContainer{
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
 	margin: auto;
-	display: block;
+	vertical-align: middle;
+	text-align: center;
 	background: rgba(0,0,0,0.8);
-	height: 90%;
-	width: 75%;
-	z-index: 1;
+	max-height: 80%;
+	max-width: 80%;
+	z-index: 99;
 }
 
 .overlayImg{
 	margin: auto;
-	position: absolute;
+	position: relative;
 	left: 0;
 	right: 0;
 	top: 0;
 	bottom: 0;
-	max-height: 100%;
-	max-width: 100%;
-	z-index: 1;
+	max-height: 500px;
+	max-width: 80%;
+	z-index: 999;
 }
 
 .overlayArrowLeftImgContainer,
 .overlayArrowRightImgContainer{
 	width: 35%;
+	height: 100%;
 	position: absolute;
+	cursor: pointer;
 	top: 0;
 	bottom: 0;
 	margin: auto;
-	z-index: 2;
+	z-index: 9999;
 }
 
 .overlayArrowLeftImgContainer{
@@ -481,11 +483,12 @@ a{
 
 .overlayQuitImgContainer{
 	position: absolute;
+	cursor: pointer;
 	top: 0;
 	right: 5px;
-	height: 30px;
-	width: 30px;
-	z-index: 3;
+	height: 20px;
+	width: 20px;
+	z-index: 999999;
 
   img{
   	max-height: 50px;
