--- a/css/info.scss
+++ b/css/info.scss
@@ -1,35 +1,37 @@
-$font-stack: "Rock Salt", cursive;
+$font-stack-top: "Rock Salt", cursive;
+$font-stack-text: "Cormorant Garamond", cursive;
 
 *{
-	box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .wrapper{
-	text-align: center;
-	text-align: -moz-center;
-	text-align: -webkit-center;
-	background-color: black;
+  text-align: center;
+  text-align: -moz-center;
+  text-align: -webkit-center;
+  background-color: black;
 }
 
 img{
-	max-height: 100%;
-	max-width: 100%;
-	vertical-align: bottom;
+  max-height: 100%;
+  max-width: 100%;
+  vertical-align: bottom;
 }
 
 a{
-	display: block;
-	margin: 0;
-	padding: 0;
-	text-decoration: none;
+  display: block;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
 }
 
 .centeredTopImage {
-	display: none;
+  display: none;
 }
 
 .logoContainer{
-  font-family: $font-stack;
+  font-family: $font-stack-top;
   position: fixed;
   top: 0;
   height: 65px;
@@ -41,65 +43,66 @@ a{
     }
 
     a{
-    	float: left;
-    	margin-left: 10px;
+      float: left;
+      margin-left: 10px;
 
       img{
-      	max-height: 60px;
-      	padding: 5px 0;
+        max-height: 60px;
+        padding: 5px 0;
       }
     }
 
     span{
-    	line-height: 65px;
-    	color: white;
-    	font-size: 0.8em;
+      line-height: 65px;
+      color: white;
+      font-size: 0.8em;
     }
 
     button{
-    	float: right;
-    	margin: 0;
-    	padding: 0;
-    	width: 40px;
-    	border: none;
-    	margin-top: 22.5px;
-    	margin-right: 20px;
-			background: rgba(0, 0, 0, 0.9);
-    	box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.3);
+      float: right;
+      margin: 0;
+      padding: 0;
+      width: 40px;
+      border: none;
+      margin-top: 22.5px;
+      margin-right: 20px;
+      background: rgba(0, 0, 0, 0.9);
+      -webkit-box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.3);
+              box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.3);
     }
 
       img{
-				vertical-align: middle;
-      	max-height: 20px;
-      	border-radius: 1px;
+        vertical-align: middle;
+        max-height: 20px;
+        border-radius: 1px;
       }
 }
 
 .lista{
-	font-family: 'Rock Salt', cursive;
-	line-height: initial;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	height: 100%;
-	display: block;
-	position: fixed;
-	top: -200%;
-	background: rgba(0, 0, 0, 0.9);
-	color: white;
-	width: 100%;
-	-webkit-transition: 0.4s;
-	transition: 0.4s;
+  font-family: $font-stack-top;
+  line-height: initial;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  height: 100%;
+  display: block;
+  position: fixed;
+  top: -200%;
+  background: rgba(0, 0, 0, 0.9);
+  color: white;
+  width: 100%;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 
   img{
     display: none;
   }
 
   li{
-  	display: block;
+    display: block;
 
     &:first-of-type{
-    	margin-top: 40%;
+      margin-top: 40%;
     }
   }
 
@@ -111,7 +114,7 @@ a{
 
   .soundContainer{
     p{
-  	display: none;
+    display: none;
     }
   }
 }
@@ -121,117 +124,120 @@ a{
 }
 
 .listaMobileInvisible{
-	display: none;
+  display: none;
 }
 
 .infoWrapper{
-	font-family: 'Rock Salt', cursive;
-	font-size: 0.8em;
-	width: 99%;
-	margin: 0 auto;
-	margin-bottom: 15px;
-	margin-top: 70px;
+  font-family: $font-stack-top;
+  font-size: 0.8em;
+  letter-spacing: 1px;
+  color: white;
+  width: 99%;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  margin-top: 70px;
 
-  p{
-  	width: 100%;
+  ul{
+    list-style: none;
   }
 
   p{
-  	color: white;
-  	text-align: center;
-  	text-align: -moz-center;
-  	text-align: -webkit-center;
-  	margin: 12px auto 0 auto;
-  	padding: 0 3px;
+    width: 100%;
+    color: white;
+    text-align: center;
+    text-align: -moz-center;
+    text-align: -webkit-center;
+    margin: 12px auto 0 auto;
+    padding: 0 3px 10px 3px;
   }
 
   figure{
-  	margin: 0 0 11px 0;
+    margin: 0 0 11px 0;
   }
 }
 
 .loaderWrapper{
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
-	width: 100%;
-	height: 100%;
-	z-index: 7;
-	background: black;
-	-webkit-transition: 0.6s;
-	transition: 0.6s;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  z-index: 7;
+  background: black;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
 }
 
 .loaderWrapperHide{
-	opacity: 0;
-	visibility: hidden;
+  opacity: 0;
+  visibility: hidden;
 }
 
 @-webkit-keyframes loader{
-	0%{background: grey; width: 10px; height: 10px;}
-	25%{background: white; width: 15px; height: 15px;}
-	50%{background: black; width: 20px; height: 20px;}
-	75%{background: white; width: 15px; height: 15px;}
-	100%{background: grey; width: 10px; height: 10px;}
+  0%{background: grey; width: 10px; height: 10px;}
+  25%{background: white; width: 15px; height: 15px;}
+  50%{background: black; width: 20px; height: 20px;}
+  75%{background: white; width: 15px; height: 15px;}
+  100%{background: grey; width: 10px; height: 10px;}
 }
 
 @keyframes loader{
-	0%{background: grey; width: 10px; height: 10px;}
-	25%{background: white; width: 15px; height: 15px;}
-	50%{background: black; width: 20px; height: 20px;}
-	75%{background: white; width: 15px; height: 15px;}
-	100%{background: grey; width: 10px; height: 10px;}
+  0%{background: grey; width: 10px; height: 10px;}
+  25%{background: white; width: 15px; height: 15px;}
+  50%{background: black; width: 20px; height: 20px;}
+  75%{background: white; width: 15px; height: 15px;}
+  100%{background: grey; width: 10px; height: 10px;}
 }
 
 .loader1, .loader2{
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	margin: auto 0;
-	border-radius: 50px;
-	-webkit-animation: loader 2s infinite;
-					animation: loader 2s infinite;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  border-radius: 50px;
+  -webkit-animation: loader 2s infinite;
+          animation: loader 2s infinite;
 }
 
 .loader1{
-	height: 10px;
-	width: 10px;
-	background: white;
-	left: calc(50% - 15px);
+  height: 10px;
+  width: 10px;
+  background: white;
+  left: calc(50% - 15px);
 }
 
 .loader2{
-	height: 10px;
-	width: 10px;
-	background: white;
-	right: calc(50% - 15px);
-	-webkit-animation-delay: 0.5s;
-	        animation-delay: 0.5s;
+  height: 10px;
+  width: 10px;
+  background: white;
+  right: calc(50% - 15px);
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
 }
 
 .footer{
-	font-family: 'Bangers', cursive;
-	line-height: 24px;
-	width: 100%;
-	font-size: 0.8em;
-	background: black;
-	color: white;
+  font-family: 'Bangers', cursive;
+  line-height: 24px;
+  width: 100%;
+  font-size: 0.8em;
+  background: black;
+  color: white;
 
   p{
-  	text-align: center;
-  	text-align: -moz-center;
-  	text-align: -webkit-center;
-  	margin: 0;
+    text-align: center;
+    text-align: -moz-center;
+    text-align: -webkit-center;
+    margin: 0;
   }
 }
 
 @media screen and (max-width: 899px) and (orientation: landscape){
-	.lista li:first-of-type{
-		margin-top: 10%;
-	}
+  .lista li:first-of-type{
+    margin-top: 10%;
+  }
 }
 
 @media screen and (min-width: 900px){
@@ -239,13 +245,13 @@ a{
 /***GLOBAL***/
 
 .wrapper{
-	background: -webkit-linear-gradient(rgba(0, 0, 0, 1) 20%, rgba(12,12,12, 0.6)), url('../img/gallery/gallery22.jpg') no-repeat center/cover;
-	background: linear-gradient(rgba(0, 0, 0, 1) 20%, rgba(12,12,12, 0.6)), url('../img/gallery/gallery22.jpg') no-repeat center/cover;
-	min-height: calc(100vh - 24px);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(20%, rgba(0, 0, 0, 1)), to(rgba(12,12,12, 0.6))), url('../img/gallery/gallery22.jpg') no-repeat center/cover;
+  background: linear-gradient(rgba(0, 0, 0, 1) 20%, rgba(12,12,12, 0.6)), url('../img/gallery/gallery22.jpg') no-repeat center/cover;
+  min-height: calc(100vh - 24px);
 }
 
 .wrapperLeft{
-	height: 140px;
+  height: 140px;
 }
 
 .selected{
@@ -253,46 +259,47 @@ a{
 }
 
 .centeredTopImage{
-	display: block;
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	z-index: 1;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 
   img{
-  	margin-top: 5px;
-  	max-height: 150px;
+    margin-top: 5px;
+    max-height: 150px;
   }
 }
 
 .logoContainer{
-	display: none;
+  display: none;
 }
 
 .lista{
-	background-color: transparent;
-	height: auto;
-	position: fixed;
-	top: 27px;
-	left: 0;
-	z-index: 3;
-	-webkit-transition: 0.6s;
-	transition: 0.6s;
+  background-color: transparent;
+  height: auto;
+  position: fixed;
+  top: 27px;
+  left: 0;
+  z-index: 3;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
 
   &:hover{
-  	box-shadow: inset 0 0 97px -20px rgba(214, 214, 194, 0.2);
+    -webkit-box-shadow: inset 0 0 97px -20px rgba(214, 214, 194, 0.2);
+            box-shadow: inset 0 0 97px -20px rgba(214, 214, 194, 0.2);
   }
 
   li{
-  	line-height: 100px;
-  	-webkit-transition: 0.6s;
-  	transition: 0.6s;
+    line-height: 100px;
+    -webkit-transition: 0.6s;
+    transition: 0.6s;
 
     &:hover{
-    	-webkit-transition: 0.4s;
-    	transition: 0.4s;
-    	text-shadow: -1px 1px 5.5px white;
+      -webkit-transition: 0.4s;
+      transition: 0.4s;
+      text-shadow: -1px 1px 5.5px white;
     }
 
     &:first-of-type {
@@ -301,112 +308,118 @@ a{
   }
 
   p{
-  	display: inline-block;
-  	margin: 0;
-  	padding: 0 0 0 3px;
-  	font-size: 100%;
+    display: inline-block;
+    margin: 0;
+    padding: 0 0 0 3px;
+    font-size: 100%;
   }
 
   a{
-  	display: inline-block;
+    display: inline-block;
   }
 }
 
 .listaScroll{
-	background-color: rgba(0, 0, 0, 0.9);
-	top: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  top: 0;
 }
 
 .mainContainer{
-	float: left;
-	margin-left: 25px;
-	height: 100px;
+  float: left;
+  margin-left: 25px;
+  height: 100px;
 
   img{
-  	display: inline-block;
-  	float: left;
-  	max-height: 80px;
-  	margin-top: 9px;
+    display: inline-block;
+    float: left;
+    max-height: 80px;
+    margin-top: 9px;
   }
 
   p{
-  	display: inline-block;
-  	float: right;
-  	margin-left: 4px;
+    display: inline-block;
+    float: right;
+    margin-left: 4px;
   }
 }
 
 .kontaktContainer{
-	float: right;
-	margin-right: 15px;
+  float: right;
+  margin-right: 15px;
 }
 
 .kontaktImg{
-	max-height: 100px;
+  max-height: 100px;
 }
 
 .galleryContainer{
-	float: right;
-	margin-right: 15px;
+  float: right;
+  margin-right: 15px;
 }
 
 .galleryImg{
-	max-height: 100px;
+  max-height: 100px;
 }
 
 .aboutContainer{
-	float: right;
+  float: right;
 }
 
 .aboutImg{
-	max-height: 100px;
+  max-height: 100px;
 }
 
 .soundContainer{
-	float: right;
-	margin-right: 25px;
+  float: right;
+  margin-right: 25px;
+  cursor: pointer;
 
   img{
-  	display: inline-block;
-  	max-height: 40px;
+    display: inline-block;
+    max-height: 40px;
     margin-top: auto;
-  	vertical-align: middle;
+    vertical-align: middle;
   }
 
   p{
-  	display:none;
+    display:none;
   }
 }
 
 .infoWrapper{
-	position: relative;
-	background: -webkit-linear-gradient(rgba(0, 0 , 0, 1) 20%, rgba(0, 0 , 0, 0.2));
-	background: linear-gradient(rgba(0, 0 , 0, 1) 20%, rgba(0, 0 , 0, 0.2));
-	margin-top: 20px;
-	width: 80%;
-	z-index: 2;
-	box-shadow: 0 0 3px 0 rgba(214, 214, 214, 0.6);
-	border-radius: 15px;
-	padding: 4px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(20%, rgba(0, 0 , 0, 1)), to(rgba(0, 0 , 0, 0.2)));
+  background: linear-gradient(rgba(0, 0 , 0, 1) 20%, rgba(0, 0 , 0, 0.2));
+  margin-top: 20px;
+  width: 80%;
+  z-index: 2;
+  -webkit-box-shadow: 0 0 3px 0 rgba(214, 214, 214, 0.6);
+          box-shadow: 0 0 3px 0 rgba(214, 214, 214, 0.6);
+  border-radius: 15px;
+  padding: 4px;
+
+  ul{
+    width: 40%;
+    li{
+      margin: 5px 0;
+    }
+  }
 
   figure{
-  	display: inline-block;
-  	float: left;
-  	margin: 12px 12px 8px 8px;
-  	padding-bottom: 6px;
-  	padding-right: 6px;
-  	border-right: 1px solid rgba(256, 256, 256, 0.6);
-  	border-bottom: 1px solid rgba(256, 256, 256, 0.6);
+    width: auto;
+    padding-bottom: 3px;
+    border-bottom: 1px solid rgba(256, 256, 256, 0.6);
   }
 
   img{
-  	max-height: 300px;
+    max-height: 500px;
   }
 
   p{
-  	display: block;
-  	z-index: 2;
-}
+    z-index: 2;
+  }
 }
 }
 
