adjusted ul styling in about section and added prefixes

--- a/css/gallery.scss
+++ b/css/gallery.scss
@@ -407,7 +407,8 @@ a{
 .overlayImgContainer{
 	position: relative;
 	top: 50%;
-	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	        transform: translateY(-50%);
 	margin: auto;
 	vertical-align: middle;
 	text-align: center;
