--- a/css/info.scss
+++ b/css/info.scss
@@ -139,6 +139,7 @@ a{
 
   ul{
     list-style: none;
+    margin: 0 auto;
   }
 
   p{
@@ -387,8 +388,13 @@ a{
 }
 
 .infoWrapper{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: relative;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(20%, rgba(0, 0 , 0, 1)), to(rgba(0, 0 , 0, 0.2)));
   background: linear-gradient(rgba(0, 0 , 0, 1) 20%, rgba(0, 0 , 0, 0.2));
